--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "node": "^20.3.1",
     "vue": "^3.3.4",
-    "vue-draggable-next": "^2.2.1"
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
