--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,7 @@
     "env.d.ts",
     "src/**/*",
     "src/**/*.vue",
-    "src/data/*.json"
+    "src/assets/quizzes/*.json"
   ],
   "exclude": [
     "src/**/__tests__/*"
